remove author name on blogs

--- a/_posts/2023-11-13-test-blog.md
+++ b/_posts/2023-11-13-test-blog.md
@@ -11,7 +11,7 @@ Test test test test test test test test test test test test test test test test 
 ### The First Section
 Test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test.
 
-#### The Second Section
+### The Second Section
 Test test test test test test test test test test test test test test test test test test.
 
 $$
