Update main text and test blog

--- a/_posts/2023-11-13-test-blog.md
+++ b/_posts/2023-11-13-test-blog.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Consequences of the $L_p$ Convergence of Lipschitz Functions"
+title: "Test blog, $h(x)=1/{x^3}$"
 date: 2023-11-13
-author: Patrick
+author: ""
 tags: [Functional Analysis, Mathematics]
 ---
  
